修复未能正确hook第三方的bug, 以hiredis做的demo

--- a/coroutine/test/Makefile
+++ b/coroutine/test/Makefile
@@ -1,13 +1,17 @@
 CC=g++
 CFLAGS=-std=c++11 -g -Wall
-TARGET=simple.t nthread.t 1thread.t sleep.t
+TARGET=simple.t nthread.t 1thread.t sleep.t hiredis.t
 #OBJS=$(patsubst %.cpp, %.o, $(wildcard *.cpp))
 OBJS=$(patsubst %, %.o, $(TARGET))
 
 all : $(TARGET)
 
+hiredis.t: hiredis.o
+	$(CC) $(CFLAGS) $^ -L.. -lhiredis -lcoroutine -o $@ -lboost_system -lboost_thread -ldl
+	echo "LD $(TARGET)"
+
 %.t: %.o
-	$(CC) $(CFLAGS) $^ -L.. -lcoroutine -o $@ -lboost_system -lboost_thread
+	$(CC) $(CFLAGS) $^ -L.. -lcoroutine -o $@ -lboost_system -lboost_thread -ldl
 	echo "LD $(TARGET)"
 
 .cpp.o:
