同时支持动态链接和静态链接两种hook

--- a/coroutine/Makefile
+++ b/coroutine/Makefile
@@ -1,19 +1,31 @@
 CC=g++
 CFLAGS=-std=c++11 -g -Wall
-TARGET=libcoroutine.a
+STATIC_LIB=libcoroutine.a
+DYNAMIC_LIB=libcoroutine.so
 OBJS=$(patsubst %.cpp, %.o, $(wildcard *.cpp))
 
-all : $(TARGET)
+all : $(STATIC_LIB) $(DYNAMIC_LIB)
 
-$(TARGET) : $(OBJS)
+$(STATIC_LIB) : $(OBJS)
 	@ar cr $@ $^
-	@echo "LD $(TARGET)"
+	@echo "LD $(STATIC_LIB)"
+
+$(DYNAMIC_LIB) : $(OBJS)
+	@echo "CC dynamic-link hook module."
+	@rm linux_glibc_hook.o -f
+	@$(CC) $(CFLAGS) -DCO_DYNAMIC_LINK -c linux_glibc_hook.cpp -o linux_glibc_hook.o
+	@$(CC) $(CFLAGS) -fPIC -shared $^ -o $@
+	@echo "LD $(DYNAMIC_LIB)"
 
 .cpp.o:
-	@$(CC) $(CFLAGS) -c $^ -o $@
 	@echo "CC $@"
+	@$(CC) $(CFLAGS) -c $^ -o $@
 
-.PHONY: clean
+.PHONY: clean install
 
 clean:
-	rm *.o *.a -f
+	rm *.o $(STATIC_LIB) $(DYNAMIC_LIB) -f
+
+install:
+	install -m 0664 $(STATIC_LIB) /usr/lib
+	install -m 0775 $(DYNAMIC_LIB) /usr/lib
