--- a/coroutine/unit_test/Makefile
+++ b/coroutine/unit_test/Makefile
@@ -1,18 +1,22 @@
 CC=g++
 CFLAGS=-std=c++11 -g -Wall
-TARGET=hook.t
+TARGET=hook.t s_hook.t
 #OBJS=$(patsubst %.cpp, %.o, $(wildcard *.cpp))
 OBJS=$(patsubst %, %.o, $(TARGET))
 
 all : $(TARGET)
 
+s_%.t: %.o
+	@$(CC) $(CFLAGS) $^ -L.. -lcoroutine -o $@ -lboost_system -lboost_thread -ldl -static -static-libgcc -static-libstdc++
+	@echo "LD $(TARGET)"
+
 %.t: %.o
-	$(CC) $(CFLAGS) $^ -L.. -lcoroutine -o $@ -lboost_system -lboost_thread -ldl
-	echo "LD $(TARGET)"
+	@$(CC) $(CFLAGS) $^ -L.. -lcoroutine -o $@ -lboost_system -lboost_thread -ldl
+	@echo "LD $(TARGET)"
 
 .cpp.o:
-	$(CC) $(CFLAGS) -c $^ -I.. -o $@
-	echo "MK $@"
+	@$(CC) $(CFLAGS) -c $^ -I.. -o $@
+	@echo "MK $@"
 
 .PHONY: clean
 
