链接时不再依赖boost_system, 细化Debug功能

--- a/coroutine/unit_test/Makefile
+++ b/coroutine/unit_test/Makefile
@@ -7,11 +7,11 @@ OBJS=$(patsubst %, %.o, $(TARGET))
 all : $(TARGET)
 
 s_%.t: %.o
-	@$(CC) $(CFLAGS) $^ -L.. -lcoroutine -o $@ -lboost_system -lboost_thread -ldl -static -static-libgcc -static-libstdc++
+	@$(CC) $(CFLAGS) $^ -o $@ -L.. -lcoroutine -static -static-libgcc -static-libstdc++
 	@echo "LD $(TARGET)"
 
 %.t: %.o
-	@$(CC) $(CFLAGS) $^ -L.. -lcoroutine -o $@ -lboost_system -lboost_thread -ldl
+	@$(CC) $(CFLAGS) $^ -o $@ -L.. -lcoroutine -ldl
 	@echo "LD $(TARGET)"
 
 .cpp.o:
