编译兼容64bit, 每个协程可以设置debug_info

--- a/coroutine/Makefile
+++ b/coroutine/Makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS=-std=c++11 -g -Wall
+CFLAGS=-std=c++11 -g -Wall -fPIC
 STATIC_LIB=libcoroutine.a
 DYNAMIC_LIB=libcoroutine.so
 OBJS=$(patsubst %.cpp, %.o, $(wildcard *.cpp))
@@ -14,7 +14,7 @@ $(DYNAMIC_LIB) : $(OBJS)
 	@echo "CC dynamic-link hook module."
 	@rm linux_glibc_hook.o -f
 	@$(CC) $(CFLAGS) -DCO_DYNAMIC_LINK -c linux_glibc_hook.cpp -o linux_glibc_hook.o
-	@$(CC) $(CFLAGS) -fPIC -shared $^ -o $@
+	@$(CC) $(CFLAGS) -shared $^ -o $@ -lpthread
 	@echo "LD $(DYNAMIC_LIB)"
 
 .cpp.o:
