支持强异常安全，允许协程中的异常延迟到调度器Run时抛出

--- a/coroutine/unit_test/gtest_unit/Makefile
+++ b/coroutine/unit_test/gtest_unit/Makefile
@@ -1,7 +1,8 @@
 CC=g++
 CFLAGS=-std=c++11 -g -Wall
 INCLUDE=-I../.. -Igtest/include
-LINK=-Lgtest/lib/.libs -lgtest -lpthread -lgtest_main -L../.. -lcoroutine
+LINK=-Lgtest/lib/.libs -lgtest -lpthread -lgtest_main -L../.. -lcoroutine -ldl \
+	 -lboost_thread -lpthread -lboost_system
 STATIC=-static -static-libgcc -static-libstdc++
 TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp)) $(patsubst %.cpp, s_%.t, $(wildcard *.cpp))
 
