--- a/coroutine/unit_test/gtest_unit/Makefile
+++ b/coroutine/unit_test/gtest_unit/Makefile
@@ -1,8 +1,8 @@
 CC=g++
 CFLAGS=-std=c++11 -g -Wall
 INCLUDE=-I../.. -Igtest/include
-LINK=-Lgtest/lib/.libs -lgtest -lpthread -lgtest_main -L../.. -lcoroutine -ldl \
-	 -lboost_thread -lpthread -lboost_system
+LINK=-Lgtest/lib/.libs -lcoroutine -lgtest -lpthread -lgtest_main -L../.. \
+	 -lboost_thread -lpthread -lboost_system -ldl
 STATIC=-static -static-libgcc -static-libstdc++
 TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp)) $(patsubst %.cpp, s_%.t, $(wildcard *.cpp))
 
