添加命名空间

--- a/coroutine/unit_test/benchmark/Makefile
+++ b/coroutine/unit_test/benchmark/Makefile
@@ -3,14 +3,13 @@ CFLAGS=-std=c++11 -g -Wall
 INCLUDE=-I../.. -Igtest/include
 LINK=-lcoroutine -ldl -lpthread -L../.. -lboost_thread -lboost_system -lpthread
 STATIC=-static -static-libgcc -static-libstdc++
-TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp))
-#$(patsubst %.cpp, s_%.t, $(wildcard *.cpp))
+TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp)) $(patsubst %.cpp, s_%.t, $(wildcard *.cpp))
 
 all : $(TARGET)
 
-#s_%.t: %.o
-#	@echo "LD $@"
-#	@$(CC) $(CFLAGS) $^ -o $@ $(INCLUDE) $(LINK) $(STATIC)
+s_%.t: %.o
+	@echo "LD $@"
+	@$(CC) $(CFLAGS) $^ -o $@ $(INCLUDE) $(LINK) $(STATIC)
 
 %.t: %.o
 	@echo "LD $@"
