修改性能测试代码默认参数

--- a/coroutine/benchmark/asio_sync/Makefile
+++ b/coroutine/benchmark/asio_sync/Makefile
@@ -1,5 +1,5 @@
 CC=g++
-CFLAGS=-std=c++11 -g -Wall
+CFLAGS=-std=c++11 -O3 -Wall
 INCLUDE=-I../.. -Igtest/include
 LINK=-lcoroutine -ldl -lpthread -L../.. -lboost_thread -lboost_system -lpthread
 STATIC=-static -static-libgcc -static-libstdc++
