--- a/coroutine/win_patch/VS2015/coroutine.vcxproj.filters
+++ b/coroutine/win_patch/VS2015/coroutine.vcxproj.filters
@@ -63,6 +63,9 @@
     <ClCompile Include="..\win_vc_hook.cpp">
       <Filter>源文件\win_patch</Filter>
     </ClCompile>
+    <ClCompile Include="..\platform_adapter.cpp">
+      <Filter>源文件\win_patch</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\block_object.h">
@@ -124,6 +127,12 @@
     </ClInclude>
     <ClInclude Include="..\sys\resource.h">
       <Filter>源文件\win_patch\sys</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\platform_adapter.h">
+      <Filter>源文件</Filter>
+    </ClInclude>
+    <ClInclude Include="..\platform_adapter.h">
+      <Filter>源文件\win_patch</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
