--- a/coroutine/win_patch/VS2015/coroutine.vcxproj
+++ b/coroutine/win_patch/VS2015/coroutine.vcxproj
@@ -148,9 +148,9 @@
     <ClCompile Include="..\..\task.cpp" />
     <ClCompile Include="..\..\thread_pool.cpp" />
     <ClCompile Include="..\..\timer.cpp" />
+    <ClCompile Include="..\io_wait.cpp" />
     <ClCompile Include="..\platform_adapter.cpp" />
     <ClCompile Include="..\ucontext.cpp" />
-    <ClCompile Include="..\win_io_wait.cpp" />
     <ClCompile Include="..\win_vc_hook.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -169,13 +169,13 @@
     <ClInclude Include="..\..\timer.h" />
     <ClInclude Include="..\..\ts_queue.h" />
     <ClInclude Include="..\arpa\inet.h" />
+    <ClInclude Include="..\io_wait.h" />
     <ClInclude Include="..\platform_adapter.h" />
     <ClInclude Include="..\sys\epoll.h" />
     <ClInclude Include="..\sys\resource.h" />
     <ClInclude Include="..\sys\socket.h" />
     <ClInclude Include="..\ucontext.h" />
     <ClInclude Include="..\unistd.h" />
-    <ClInclude Include="..\win_io_wait.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
