--- a/coroutine/win_patch/VS2015/unit_test.vcxproj
+++ b/coroutine/win_patch/VS2015/unit_test.vcxproj
@@ -155,6 +155,7 @@
     <ClCompile Include="..\..\unit_test\gtest_unit\channel.cpp" />
     <ClCompile Include="..\..\unit_test\gtest_unit\exception.cpp" />
     <ClCompile Include="..\..\unit_test\gtest_unit\mass_co.cpp" />
+    <ClCompile Include="..\..\unit_test\gtest_unit\sync_asio.cpp" />
     <ClCompile Include="..\..\unit_test\gtest_unit\timer.cpp" />
     <ClCompile Include="..\..\unit_test\gtest_unit\ts_queue.cpp" />
   </ItemGroup>
