--- a/coroutine/win_patch/VS2015/coroutine.vcxproj.filters
+++ b/coroutine/win_patch/VS2015/coroutine.vcxproj.filters
@@ -22,6 +22,9 @@
     <Filter Include="源文件\win_patch\arpa">
       <UniqueIdentifier>{c30ed822-41eb-4d3c-8a62-aa35b800a81b}</UniqueIdentifier>
     </Filter>
+    <Filter Include="源文件\win_patch\mhook">
+      <UniqueIdentifier>{5f8739be-92a9-4695-b268-b134b2e046b6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -65,6 +68,21 @@
     </ClCompile>
     <ClCompile Include="..\io_wait.cpp">
       <Filter>源文件\win_patch</Filter>
+    </ClCompile>
+    <ClCompile Include="..\mhook\mhook-lib\mhook.cpp">
+      <Filter>源文件\win_patch\mhook</Filter>
+    </ClCompile>
+    <ClCompile Include="..\mhook\disasm-lib\cpu.c">
+      <Filter>源文件\win_patch\mhook</Filter>
+    </ClCompile>
+    <ClCompile Include="..\mhook\disasm-lib\disasm.c">
+      <Filter>源文件\win_patch\mhook</Filter>
+    </ClCompile>
+    <ClCompile Include="..\mhook\disasm-lib\disasm_x86.c">
+      <Filter>源文件\win_patch\mhook</Filter>
+    </ClCompile>
+    <ClCompile Include="..\mhook\disasm-lib\misc.c">
+      <Filter>源文件\win_patch\mhook</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -133,6 +151,24 @@
     </ClInclude>
     <ClInclude Include="..\io_wait.h">
       <Filter>源文件\win_patch</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mhook\mhook-lib\mhook.h">
+      <Filter>源文件\win_patch\mhook</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mhook\disasm-lib\cpu.h">
+      <Filter>源文件\win_patch\mhook</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mhook\disasm-lib\disasm.h">
+      <Filter>源文件\win_patch\mhook</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mhook\disasm-lib\disasm_x86.h">
+      <Filter>源文件\win_patch\mhook</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mhook\disasm-lib\disasm_x86_tables.h">
+      <Filter>源文件\win_patch\mhook</Filter>
+    </ClInclude>
+    <ClInclude Include="..\mhook\disasm-lib\misc.h">
+      <Filter>源文件\win_patch\mhook</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
