--- a/coroutine/Makefile
+++ b/coroutine/Makefile
@@ -2,7 +2,7 @@ CC=g++
 CFLAGS=-std=c++11 -g -O3 -Wall -fPIC
 STATIC_LIB=libcoroutine.a
 DYNAMIC_LIB=libcoroutine.so
-INCLUDE=-Ilinux
+INCLUDE=-I. -Ilinux
 OBJS=$(patsubst %.cpp, %.o, $(wildcard *.cpp)) $(patsubst %.cpp, %.o, $(wildcard linux/*.cpp))
 
 all : $(STATIC_LIB) $(DYNAMIC_LIB)
