--- a/coroutine/unit_test/gtest_unit/Makefile
+++ b/coroutine/unit_test/gtest_unit/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 CFLAGS=-std=c++11 -g -Wall
-INCLUDE=-Igtest/include -I/usr/include/coroutine -I../..
+INCLUDE=-Igtest/include -I/usr/include/coroutine -I../.. -I../../linux
 LINK=-Lgtest/lib/.libs -lcoroutine -ldl -lgtest_main -lgtest -lpthread -L../..\
 	 -lboost_thread -lboost_system -lpthread
 STATIC=-static -static-libgcc -static-libstdc++
