--- a/coroutine/samples/Makefile
+++ b/coroutine/samples/Makefile
@@ -1,6 +1,6 @@
 CC=g++
 CFLAGS=-std=c++11 -g -Wall
-INCLUDE=-I..
+INCLUDE=-I.. -I../linux
 LINK=-L.. -lcoroutine -ldl -lboost_thread -lboost_system -lpthread
 STATIC=-static -static-libgcc -static-libstdc++
 TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp))
