--- a/coroutine/benchmark/sysctl.conf
+++ b/coroutine/benchmark/sysctl.conf
@@ -86,3 +86,4 @@ net.nf_conntrack_max = 1255360
 net.ipv4.tcp_abort_on_overflow = 1
 net.ipv4.tcp_no_metrics_save = 1
 net.ipv4.tcp_slow_start_after_idle = 0
+net.ipv4.ip_local_port_range = 3000 63000
