--- a/network/test/Makefile
+++ b/network/test/Makefile
@@ -2,7 +2,7 @@ CC=g++
 CFLAGS=-std=c++11 -g -Wall
 INCLUDE=-I..
 LINK=-lcoroutine -ldl -lnetwork -lpthread -L..\
-	 -lboost_thread -lboost_system -lpthread
+	 -lboost_thread -lboost_system -lboost_regex -lpthread
 TARGET=$(patsubst %.cpp, %.t, $(wildcard *.cpp))
 
 all : $(TARGET)
