--- a/coroutine/Makefile
+++ b/coroutine/Makefile
@@ -1,5 +1,6 @@
 CC=g++
-CFLAGS=-std=c++11 -g -Wall -fPIC
+#CFLAGS=-std=c++11 -g -Wall -fPIC
+CFLAGS=-std=c++11 -O3 -Wall -fPIC
 STATIC_LIB=libcoroutine.a
 DYNAMIC_LIB=libcoroutine.so
 INCLUDE=-I. -Ilinux
