--- a/network/Makefile
+++ b/network/Makefile
@@ -1,6 +1,6 @@
 CC=g++
-CFLAGS=-std=c++11 -g -Wall -fPIC
-#CFLAGS=-std=c++11 -O3 -Wall -fPIC
+#CFLAGS=-std=c++11 -g -Wall -fPIC
+CFLAGS=-std=c++11 -O3 -Wall -fPIC
 STATIC_LIB=libnetwork.a
 INCLUDE=-I.
 OBJS=$(patsubst %.cpp, %.o, $(wildcard *.cpp))
